adjust flshcard dimensions to avoid horizontal overflow in mobile portrait view

--- a/src/index.css
+++ b/src/index.css
@@ -165,11 +165,11 @@ h1, h2, h3, h4, h5, h6, ol {
 .flashcard {
   padding: 24px;
   border: dotted black 0.5px;
-  width: 380px;
-  height: 220px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 276px;
+  height: 220px;
 }
 
 .recto {
@@ -181,6 +181,10 @@ h1, h2, h3, h4, h5, h6, ol {
 
 
 @media (min-width: 640px) {
+  .flashcard {
+    width: 380px;
+    height: 220px;
+  }
 
 }
 
